finished basic functionality

--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
+    <div>
+      <button id="make-traveler">Make your traveler!</button>
+      <input
+        type="text"
+        placeholder="Enter Traveler's name"
+        id="traveler-name"
+      />
+    </div>
+    <br />
+    <div id="traveler-list">
+      <div id="wagon-people">
+        <button id="show-wagon">Display Wagon Passengers</button>
+      </div>
+      <div id="wagon-food">
+        <button id="show-food">Display Passengers Food</button>
+      </div>
+      <div id="wagon-health">
+        <button id="show-health">Display Passengers Health</button>
+      </div>
+      <div id="eat-button">
+        <button id="show-eat">Eat some food!</button>
+      </div>
+      <div id="show-hunt">
+        <button id="hunt-button">Hunt some food!</button>
+      </div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
